src/test/resources/examples/failing/ieee-explore-04.t
https://ieeexplore.ieee.org/xpl/freeabs_all.jsp?arnumber=4567935&abstractAccess=no&userType=

Multi range month
@inproceedings{Maier:1977:space:10.1109/SFCS.1977.4,
  author = {Maier, David},
  affiliation = {Princeton University, Princeton, NJ, USA},
  title = {A space efficient method for the lowest common ancestor problem and an application to finding negative cycles},
  booktitle = {18th Annual Symposium on Foundations of Computer Science (sfcs 1977)},
  location = {Providence, RI, USA},
  conference_date = {31 Oct.-2 Nov. 1977},
  pages = {132--141},
  month = oct # {--} # nov,
  year = {1977},
  publisher = {IEEE},
  issn = {0272-5428},
  doi = {10.1109/SFCS.1977.4},
  bib_scrape_url = {https://ieeexplore.ieee.org/xpl/freeabs_all.jsp?arnumber=4567935&abstractAccess=no&userType=},
  keywords = {Tree graphs; Performance evaluation; Testing},
  abstract = {We present a method for computing ancestor information in trees. We show the method is tunable to specific applications, and compare it to other methods. Finally, we apply our procedures to the problem of finding negative cycles in sparse graphs.},
}
